k8s/backend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert -f ../docker-compose-k8s.yml
    kompose.version: 1.35.0 (9532ceef3)
  labels:
    io.kompose.service: backend
  name: backend
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: backend
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert -f ../docker-compose-k8s.yml
        kompose.version: 1.35.0 (9532ceef3)
      labels:
        io.kompose.service: backend
    spec:
      containers:
        - env:
            - name: POSTGRES_DB
              value: predictions
            - name: POSTGRES_HOST
              value: postgres.happymeter.svc.cluster.local
            - name: POSTGRES_PASSWORD
              value: Password!
            - name: POSTGRES_USER
              value: user
          image: happyregistry.azurecr.io/happymeter-backend:1
          name: backend-container
          ports:
            - containerPort: 8080
              protocol: TCP
      restartPolicy: Always
