k8s/frontend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert -f ../docker-compose-k8s.yml
    kompose.version: 1.35.0 (9532ceef3)
  labels:
    io.kompose.service: frontend
  name: frontend
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: frontend
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert -f ../docker-compose-k8s.yml
        kompose.version: 1.35.0 (9532ceef3)
      labels:
        io.kompose.service: frontend
    spec:
      containers:
        - env:
            - name: BACKEND_HOST
              value: backend:8080
          image: happyregistry.azurecr.io/happymeter-frontend:1
          name: frontend-container
          ports:
            - containerPort: 8501
              protocol: TCP
      restartPolicy: Always
